[FIX] Fixes broken layout

--- a/app/assets/stylesheets/boards.css.scss
+++ b/app/assets/stylesheets/boards.css.scss
@@ -3,22 +3,14 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 body {
   background-color: #999;
+  background-image: url('/images/bg_corkboard.png');
+  background-repeat: repeat;
 }
 
 #header_navi {
   width: 760px;
   height: 100px;
   margin: 0 auto;
-}
-
-#container {
-  background-image: url('/images/bg_corkboard.png');
-  background-repeat: repeat;
-  width: 760px;
-  height: 100%;
-  margin: 0 auto;
-  padding: 20px 15px 20px 15px;
-  position: relative;
 }
 
 .item {
